# zipcodelib

./: .gitignore  LICENSE  LICENSE.html  README.md  lookup.py  pyproject.toml  requirements-dev.txt  util.py
__pycache__/: Garment Measurements.xlsx  NOTES.md  mens_dress_shirt.csv
datasets/: README.md  __init__.py  load_households.py  load_income.py  load_language.py  load_lat_long.py  load_religion.py  make_population_density.py
features/: IRS.csv  geography.csv  pop_density.csv
tests/: __init__.py  test_lookup.py  test_util.py
tuned_data/: README  README.md
